--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,25 +52,20 @@
 <!--fin menu cabecera-->
 
 <!--inicio principal-->
-<main>
-        <div>
+<main class="main-nosotros">
+        <div class="mision">
             <h2>MISION </h2>
             <P>Producir plantas con los más altos estándares de calidad y sanidad. Entregando un servicio confiable a pequeños, medianos y grandes agricultores a lo largo del país, el cual se enfoca en la innovación y desarrollo para nuevos desafíos productivos.
             </P>
         </div>
-        <div>
+        <div class="vision">
             <h2>VISION</h2>
             <P>Llegar a convertirnos en un real medio de desarrollo para la producción de plantas para el mercado nacional e internacional, es nuestro principal objetivo. A través de la implementación de novedosas técnicas productivas y comerciales, queremos generar un cambio radical a la experiencia de la compra de plantas.
             </P>
         </div>
-        <div>
+        <div class="valores">
             <h2>VALORES </h2>
             <P>Cooperación y trabajo en equipo. Respeto por el individuo. Lucha por la excelencia. Cuidado de la gente, la comunidad y el medio ambiente.</P>
-        </div>
-        <div>
-           <h2>QUIENES SOMOS</h2>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. LLorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosamaboriosam</p>
         </div>
 </main>
 <!--fin principal-->
