--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>workshop</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="shortcut icon" href="../images/logoico.ico" type="image/x-icon">
 </head>
 <body>
@@ -54,7 +54,7 @@
 <!--Inicio principal-->
 <main class="whorkshop-container">
     <div class="container-item">
-        <iframe width="700" height="400" src="https://www.youtube.com/embed/7vJoGb2Q4w8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="ifr-flor" width="700" height="400" src="https://www.youtube.com/embed/7vJoGb2Q4w8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="workshop-item">
             <h2 class="item-title">Florista profesional</h2>
             <p class="item-text"> En este taller entrenamos al alumno con todos los temas necesarios para el oficio de Florista y Decorador Profesional.
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="container-item two">
-        <iframe width="700" height="400" src="https://www.youtube.com/embed/7dMJfJ9Kh-k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="ifr-jard" width="700" height="400" src="https://www.youtube.com/embed/7dMJfJ9Kh-k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="workshop-item">
             <h2 class="item-title2">jardinería profesional</h2>
             <p class="item-text2">Este programa está dirigido a personas con sensibilidad artística que se interesen en ampliar su perspectiva laboral a través de esta capacitación. Establecemos el estudio como medio fundamental para ejecutar diversas labores de organización en jardines de construcciones arquitectónicas, de infraestructura pública y demás espacios que requieren una hermosa visión de jardinería, al ser el jardinero profesional el encargado de la visión armoniosa del espacio, a la vez que percibe el espacio que lo rodea
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="container-item">
-        <iframe width="700" height="400" src="https://www.youtube.com/embed/m1V7wjUJ6Fs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="ifr-vert" width="700" height="400" src="https://www.youtube.com/embed/m1V7wjUJ6Fs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="workshop-item">
             <h2 class="item-title">jardines verticales</h2>
             <p class="item-text">En este Taller aprenderas sobre el diseño de un Jardín vertical: Estilos, formas y paisajes que se combinan en el mismo. Aplicar sistemas de riego, y mantenimiento de toda la obra.
