--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="shortcut icon" href="../images/logoico.ico" type="image/x-icon">
 </head>
 <body>
