--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nosotros</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="shortcut icon" href="../images/logoico.ico" type="image/x-icon">
 </head>
 <body>
@@ -53,6 +53,10 @@
 
 <!--inicio principal-->
 <main class="main-nosotros">
+        <h1>Vivero Pedotti</h1>    
+        <p>
+        Somos un vivero productor que se fundo en el año 1983 con el sueño de trabajar en el arte de hacer plantas, con premisas claras y el compromiso de producir plantas de calidad y lograr un servicio al cliente que permita lograr un vínculo de confianza y respeto. 
+        </p>
         <div class="mision">
             <h2>MISION </h2>
             <P>Producir plantas con los más altos estándares de calidad y sanidad. Entregando un servicio confiable a pequeños, medianos y grandes agricultores a lo largo del país, el cual se enfoca en la innovación y desarrollo para nuevos desafíos productivos.
