--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
     <!--Menu cabecera-->
     <header class="header-container">
 
-        <section class="section-logo">
+        <section class="header-logo">
             <a href="index.html">
                 <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
             </a>
         </section>
 
-        <section class="section-navegable">
+        <section class="header-navegable">
             <nav class="navegable-container">
                 <ul class="navegable-menu">
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="index.html" class="navegable-item">home</a>
                     </li>
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="pages/productos.html" class="navegable-item">productos</a>
                     </li>
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="pages/workshop.html" class="navegable-item">workshop</a>
                     </li>
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="pages/servicios.html" class="navegable-item">servicios</a>
                     </li>
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="pages/contacto.html" class="navegable-item">contacto</a>
                     </li>
-                    <li class="navegable-menu">
+                    <li class="navegable-item">
                         <a href="pages/nosotros.html" class="navegable-item">nosotros</a>
                     </li>
                 </ul>
             </nav>
         </section>
 
-        <section class="section-sales">
+        <section class="header-sales">
             <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
             <img class="sales-img" src="images/loginusuario.png" alt="usuario">
         </section>
