--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <section class="header-logo">
             <a href="index.html">
-                <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
+                <img class="section-logo img" src="images/index/logo.png" alt="imagenviveropedotti">
             </a>
         </section>
 
@@ -46,8 +46,8 @@
         </section>
 
         <section class="header-sales">
-            <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
-            <img class="sales-img" src="images/loginusuario.png" alt="usuario">
+            <img class="sales-img" src="images/index/carro7x7.png" alt="carro7x7">
+            <img class="sales-img" src="images/index/loginusuario.png" alt="usuario">
         </section>
 
     </header>
@@ -60,17 +60,17 @@
             <ul class="itemjar">
                 <li>
                     <a href="pages/servicios.html" target="_blank">
-                        <img src="images/huertavertical.png" class="imageni1" alt="imagen a servicios">
+                        <img src="images/index/huertavertical.png" class="imageni1" alt="imagen a servicios">
                     </a>
                 </li>
                 <li>
                     <a href="pages/productos.html" target="_blank">
-                        <img src="images/orquidea.png" class="imageni1" alt="imagen a productos">
+                        <img src="images/index/orquidea.png" class="imageni1" alt="imagen a productos">
                     </a>
                 </li>
                 <li>
                     <a href="pages/workshop.html" target="_blank">
-                        <img src="images/jardineria.png" class="imageni1" alt="images to workshop">
+                        <img src="images/index/jardineria.png" class="imageni1" alt="images to workshop">
                     </a>
                 </li>
             </ul>
@@ -104,7 +104,7 @@
     <footer id="pie" class="footer-container">
         <div class="footer-logo">
             <a href="index.html">
-                <img src="images/logo.png" alt="imagenlogo" class="footer-logo imgf">
+                <img src="images/index/logo.png" alt="imagenlogo" class="footer-logo imgf">
             </a>
         </div>
 
@@ -116,9 +116,9 @@
         </div>
 
         <div class="footer-redes">
-            <img src="images/logoinsta.png" alt="Instagram" class="footer-redes img">
-            <img src="images/logowhat.png" alt="Whatsapp" class="footer-redes img">
-            <img src="images/logogmail.png" alt="mail" class="footer-redes img">
+            <img src="images/index/logoinsta.png" alt="Instagram" class="footer-redes img">
+            <img src="images/index/logowhat.png" alt="Whatsapp" class="footer-redes img">
+            <img src="images/index/logogmail.png" alt="mail" class="footer-redes img">
         </div>
 
         <div class="footer-navegable">
