--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,41 +15,41 @@
 
 <!--Menu cabecera-->
 <header class="header-container">
-    
-    <section class="section-logo">
-            <a href="../index.html">    
-                <img class="section-logo img" src="../images/logo.png" alt="imagenlogo">
-            </a>    
+
+    <section class="header-logo">
+        <a href="index.html">
+            <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
+        </a>
     </section>
 
-    <section class="section-navegable">
-        <div class="navegable-container">
+    <section class="header-navegable">
+        <nav class="navegable-container">
             <ul class="navegable-menu">
-                <li class="navegable-menu">
+                <li class="navegable-item">
                     <a href="../index.html" class="navegable-item">home</a>
                 </li>
-                <li class="navegable-menu">
-                    <a href="productos.html" class="navegable-item">productos</a>
+                <li class="navegable-item">
+                    <a href="pages/productos.html" class="navegable-item">productos</a>
                 </li>
-                <li class="navegable-menu">    
-                    <a href="workshop.html" class="navegable-item">workshop</a>
+                <li class="navegable-item">
+                    <a href="pages/workshop.html" class="navegable-item">workshop</a>
                 </li>
-                <li class="navegable-menu">
-                    <a href="servicios.html" class="navegable-item">servicios</a>
+                <li class="navegable-item">
+                    <a href="pages/servicios.html" class="navegable-item">servicios</a>
                 </li>
-                <li class="navegable-menu">
-                    <a href="contacto.html" class="navegable-item">contacto</a>
+                <li class="navegable-item">
+                    <a href="pages/contacto.html" class="navegable-item">contacto</a>
                 </li>
-                <li class="navegable-menu">
-                    <a href="nosotros.html" class="navegable-item">nosotros</a>
+                <li class="navegable-item">
+                    <a href="pages/nosotros.html" class="navegable-item">nosotros</a>
                 </li>
             </ul>
-        </div>   
-    </section>   
-    
-    <section class="section-sales">
-        <img class="sales-img" src="../images/carro7x7.png" alt="carro7x7">
-        <img class="sales-img" src="../images/loginusuario.png" alt="usuario">
+        </nav>
+    </section>
+
+    <section class="header-sales">
+        <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
+        <img class="sales-img" src="images/loginusuario.png" alt="usuario">
     </section>
 
 </header>
