--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,8 +15,8 @@
     <header class="header-container">
 
         <section class="header-logo">
-            <a href="index.html">
-                <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
+            <a href="../index.html">
+                <img class="section-logo img" src="../images/index/logo.png" alt="imagenlogo">
             </a>
         </section>
 
@@ -27,27 +27,27 @@
                         <a href="../index.html" class="navegable-item">home</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/productos.html" class="navegable-item">productos</a>
+                        <a href="productos.html" class="navegable-item">productos</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/workshop.html" class="navegable-item">workshop</a>
+                        <a href="workshop.html" class="navegable-item">workshop</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/servicios.html" class="navegable-item">servicios</a>
+                        <a href="servicios.html" class="navegable-item">servicios</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/contacto.html" class="navegable-item">contacto</a>
+                        <a href="contacto.html" class="navegable-item">contacto</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/nosotros.html" class="navegable-item">nosotros</a>
+                        <a href="nosotros.html" class="navegable-item">nosotros</a>
                     </li>
                 </ul>
             </nav>
         </section>
 
         <section class="header-sales">
-            <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
-            <img class="sales-img" src="images/loginusuario.png" alt="usuario">
+            <img class="sales-img" src="../images/index/carro7x7.png" alt="carro compras">
+            <img class="sales-img" src="../images/index/loginusuario.png" alt="login usuario">
         </section>
 
     </header>
@@ -109,7 +109,7 @@
     <footer id="pie" class="footer-container">
         <div class="footer-logo">
             <a href="../index.html">
-                <img src="../images/logo.png" alt="imagenlogo" class="footer-logo imgf">
+                <img src="../images/index/logo.png" alt="imagenlogo" class="footer-logo imgf">
             </a>
         </div>
         <div class="footer-map">
@@ -119,9 +119,9 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="footer-redes">
-            <img src="../images/logoinsta.png" alt="Instagram" class="footer-redes img">
-            <img src="../images/logowhat.png" alt="Whatsapp" class="footer-redes img">
-            <img src="../images/logogmail.png" alt="mail" class="footer-redes img">
+            <img src="../images/index/logoinsta.png" alt="Instagram" class="footer-redes img">
+            <img src="../images/index/logowhat.png" alt="Whatsapp" class="footer-redes img">
+            <img src="../images/index/logogmail.png" alt="mail" class="footer-redes img">
         </div>
         <div class="footer-navegable">
             <ul class="footer-menu item">
