--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -13,7 +13,7 @@
     <header class="header-container">
 
         <section class="header-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img class="section-logo img" src="../images/index/logo.png" alt="logoviveropedotti">
             </a>
         </section>
