--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nosotros</title>
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" href="../images/logoico.ico" type="image/x-icon">
 </head>
+
 <body>
     <!--Menu cabecera-->
     <header class="header-container">
 
         <section class="header-logo">
-            <a href="index.html">
-                <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
+            <a href="../index.html">
+                <img class="section-logo img" src="../images/index/logo.png" alt="imagenlogo">
             </a>
         </section>
 
@@ -25,92 +27,107 @@
                         <a href="../index.html" class="navegable-item">home</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/productos.html" class="navegable-item">productos</a>
+                        <a href="productos.html" class="navegable-item">productos</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/workshop.html" class="navegable-item">workshop</a>
+                        <a href="workshop.html" class="navegable-item">workshop</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/servicios.html" class="navegable-item">servicios</a>
+                        <a href="servicios.html" class="navegable-item">servicios</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/contacto.html" class="navegable-item">contacto</a>
+                        <a href="contacto.html" class="navegable-item">contacto</a>
                     </li>
                     <li class="navegable-item">
-                        <a href="pages/nosotros.html" class="navegable-item">nosotros</a>
+                        <a href="nosotros.html" class="navegable-item">nosotros</a>
                     </li>
                 </ul>
             </nav>
         </section>
 
         <section class="header-sales">
-            <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
-            <img class="sales-img" src="images/loginusuario.png" alt="usuario">
+            <img class="sales-img" src="../images/index/carro7x7.png" alt="carro7x7">
+            <img class="sales-img" src="../images/index/loginusuario.png" alt="usuario">
         </section>
 
     </header>
-<!--fin menu cabecera-->
+    <!--fin menu cabecera-->
 
-<!--inicio principal-->
-<main class="main-nosotros">
-        <h1>Vivero Pedotti</h1>    
-        <p>
-        Somos un vivero productor que se fundo en el año 1983 con el sueño de trabajar en el arte de hacer plantas, con premisas claras y el compromiso de producir plantas de calidad y lograr un servicio al cliente que permita lograr un vínculo de confianza y respeto. 
+    <!--inicio principal-->
+    <main class="main-nosotros">
+        <h1 class="destacado-titulo">Vivero Pedotti</h1>
+        <p class="destacado-nosotros">
+            Somos un vivero productor que se fundo en el año 1983 con el sueño de trabajar en el arte de hacer plantas,
+            con premisas claras y el compromiso de producir plantas de calidad y lograr un servicio al cliente que
+            permita lograr un vínculo de confianza y respeto.
         </p>
-        <div class="mision">
-            <h2>MISION </h2>
-            <P>Producir plantas con los más altos estándares de calidad y sanidad. Entregando un servicio confiable a pequeños, medianos y grandes agricultores a lo largo del país, el cual se enfoca en la innovación y desarrollo para nuevos desafíos productivos.
-            </P>
-        </div>
-        <div class="vision">
-            <h2>VISION</h2>
-            <P>Llegar a convertirnos en un real medio de desarrollo para la producción de plantas para el mercado nacional e internacional, es nuestro principal objetivo. A través de la implementación de novedosas técnicas productivas y comerciales, queremos generar un cambio radical a la experiencia de la compra de plantas.
-            </P>
-        </div>
-        <div class="valores">
-            <h2>VALORES </h2>
-            <P>Cooperación y trabajo en equipo. Respeto por el individuo. Lucha por la excelencia. Cuidado de la gente, la comunidad y el medio ambiente.</P>
-        </div>
-</main>
-<!--fin principal-->
 
-<!--Pie de pagina-->
-<footer id="pie" class="footer-container">
-    <div class="footer-logo">
-        <a href="../index.html">
-            <img src="../images/logo.png" alt="imagenlogo" class="footer-logo imgf">
-        </a>
-    </div> 
-    <div class="footer-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7411193916855!2d-58.43970308477089!3d-34.58541648046418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb58d093124c1%3A0xf2f9ff11af9419a0!2sFitz%20Roy%201549%2C%20C1414CHU%20CABA!5e0!3m2!1ses-419!2sar!4v1648915595876!5m2!1ses-419!2sar" width="150" height="125" style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <div class="footer-redes">
-        <img src="../images/logoinsta.png" alt="Instagram" class="footer-redes img">
-        <img src="../images/logowhat.png" alt="Whatsapp" class="footer-redes img">
-        <img src="../images/logogmail.png" alt="mail" class="footer-redes img">
-    </div>
-    <div class="footer-navegable">
-        <ul class="footer-menu item">
-            <li  class="footer-menu item">
-                <a href="../index.html" class="footer-menu list"> home</a>
-            </li>
-            <li class="footer-menu item">
-                <a href="productos.html" class="footer-menu list">productos</a>
-            </li>
-            <li class="footer-menu item">
-                <a href="workshop.html" class="footer-menu list">workshop</a>
-            </li>
-            <li class="footer-menu item">
-                <a href="servicios.html" class="footer-menu list">servicios</a>
-            </li>
-            <li class="footer-menu item">
-                <a href="contacto.html" class="footer-menu list">contacto</a>
-            </li>
-            <li class="footer-menu item">
-                <a href="nosotros.html" class="footer-menu list">nosotros</a>
-            </li>
-        </ul>
-    </div>
-</footer>
+        <div class="mision">
+            <h2 class="nosotros-titulo">MISION </h2>
+            <P class="nosotros-texto">Producir plantas con los más altos estándares de calidad y sanidad. Entregando un
+                servicio confiable a pequeños, medianos y grandes agricultores a lo largo del país, el cual se enfoca en
+                la innovación y desarrollo para nuevos desafíos productivos.
+            </P>
+        </div>
+
+        <div class="vision">
+            <h2 class="nosotros-titulo2">VISION</h2>
+            <P class="nosotros-texto">Llegar a convertirnos en un real medio de desarrollo para la producción de plantas
+                para el mercado nacional e internacional, es nuestro principal objetivo. A través de la implementación
+                de novedosas técnicas productivas y comerciales, queremos generar un cambio radical a la experiencia de
+                la compra de plantas.
+            </P>
+        </div>
+
+        <div class="valores">
+            <h2 class="nosotros-titulo3">VALORES </h2>
+            <P class="nosotros-texto">Cooperación y trabajo en equipo. Respeto por el individuo. Lucha por la
+                excelencia. Cuidado de la gente, la comunidad y el medio ambiente.</P>
+        </div>
+    </main>
+    <!--fin principal-->
+
+    <!--Pie de pagina-->
+    <footer id="pie" class="footer-container">
+        <div class="footer-logo">
+            <a href="../index.html">
+                <img src="../images/index/logo.png" alt="imagenlogo" class="footer-logo imgf">
+            </a>
+        </div>
+        <div class="footer-map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7411193916855!2d-58.43970308477089!3d-34.58541648046418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb58d093124c1%3A0xf2f9ff11af9419a0!2sFitz%20Roy%201549%2C%20C1414CHU%20CABA!5e0!3m2!1ses-419!2sar!4v1648915595876!5m2!1ses-419!2sar"
+                width="150" height="125" style="border:1px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="footer-redes">
+            <img src="../images/index/logoinsta.png" alt="Instagram" class="footer-redes img">
+            <img src="../images/index/logowhat.png" alt="Whatsapp" class="footer-redes img">
+            <img src="../images/index/logogmail.png" alt="gmail" class="footer-redes img">
+        </div>
+        <div class="footer-navegable">
+            <ul class="footer-menu item">
+                <li class="footer-menu item">
+                    <a href="../index.html" class="footer-menu list"> home</a>
+                </li>
+                <li class="footer-menu item">
+                    <a href="productos.html" class="footer-menu list">productos</a>
+                </li>
+                <li class="footer-menu item">
+                    <a href="workshop.html" class="footer-menu list">workshop</a>
+                </li>
+                <li class="footer-menu item">
+                    <a href="servicios.html" class="footer-menu list">servicios</a>
+                </li>
+                <li class="footer-menu item">
+                    <a href="contacto.html" class="footer-menu list">contacto</a>
+                </li>
+                <li class="footer-menu item">
+                    <a href="nosotros.html" class="footer-menu list">nosotros</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
