--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -17,8 +17,8 @@
 <header class="header-container">
 
     <section class="header-logo">
-        <a href="index.html">
-            <img class="section-logo img" src="images/logo.png" alt="imagenlogo">
+        <a href="../index.html">
+            <img class="section-logo img" src="../images/index/logo.png" alt="imagenlogo">
         </a>
     </section>
 
@@ -29,27 +29,27 @@
                     <a href="../index.html" class="navegable-item">home</a>
                 </li>
                 <li class="navegable-item">
-                    <a href="pages/productos.html" class="navegable-item">productos</a>
+                    <a href="productos.html" class="navegable-item">productos</a>
                 </li>
                 <li class="navegable-item">
-                    <a href="pages/workshop.html" class="navegable-item">workshop</a>
+                    <a href="workshop.html" class="navegable-item">workshop</a>
                 </li>
                 <li class="navegable-item">
-                    <a href="pages/servicios.html" class="navegable-item">servicios</a>
+                    <a href="servicios.html" class="navegable-item">servicios</a>
                 </li>
                 <li class="navegable-item">
-                    <a href="pages/contacto.html" class="navegable-item">contacto</a>
+                    <a href="contacto.html" class="navegable-item">contacto</a>
                 </li>
                 <li class="navegable-item">
-                    <a href="pages/nosotros.html" class="navegable-item">nosotros</a>
+                    <a href="nosotros.html" class="navegable-item">nosotros</a>
                 </li>
             </ul>
         </nav>
     </section>
 
     <section class="header-sales">
-        <img class="sales-img" src="images/carro7x7.png" alt="carro7x7">
-        <img class="sales-img" src="images/loginusuario.png" alt="usuario">
+        <img class="sales-img" src="../images/index/carro7x7.png" alt="carro7x7">
+        <img class="sales-img" src="../images/index/loginusuario.png" alt="usuario">
     </section>
 
 </header>
@@ -58,7 +58,7 @@
 <!--Inicio principal-->
 <main class="jardin-container">
 
-    <div class="servicio jardineria">
+    <div class="servicio-jardineria">
 
         <h2 class="jardin-title">Jardineria Profesional</h2>
         <p class="jardin-text">
@@ -66,7 +66,7 @@
         </p>
 
     </div>
-    <div class="servicio vertical">
+    <div class="servicio-vertical">
 
         <h2 class="jardin-title2">jardines verticales</h2>
         <p class="jardin-text2">
@@ -75,7 +75,7 @@
         </p>
 
     </div>
-    <div class="servicio florista">
+    <div class="servicio-florista">
 
         <h2 class="jardin-title">Florista Profesional</h2>
         <p class="jardin-text">
@@ -92,16 +92,16 @@
 <footer id="pie" class="footer-container">
     <div class="footer-logo">
         <a href="../index.html">
-            <img src="../images/logo.png" alt="imagenlogo" class="footer-logo imgf">
+            <img src="../images/index/logo.png" alt="imagenlogo" class="footer-logo imgf">
         </a>
     </div> 
     <div class="footer-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7411193916855!2d-58.43970308477089!3d-34.58541648046418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb58d093124c1%3A0xf2f9ff11af9419a0!2sFitz%20Roy%201549%2C%20C1414CHU%20CABA!5e0!3m2!1ses-419!2sar!4v1648915595876!5m2!1ses-419!2sar" width="150" height="125" style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="footer-redes">
-        <img src="../images/logoinsta.png" alt="Instagram" class="footer-redes img">
-        <img src="../images/logowhat.png" alt="Whatsapp" class="footer-redes img">
-        <img src="../images/logogmail.png" alt="mail" class="footer-redes img">
+        <img src="../images/index/logoinsta.png" alt="Instagram" class="footer-redes img">
+        <img src="../images/index/logowhat.png" alt="Whatsapp" class="footer-redes img">
+        <img src="../images/index/logogmail.png" alt="mail" class="footer-redes img">
     </div>
     <div class="footer-navegable">
         <ul class="footer-menu item">
