--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ViveroWeb</title>
+    <title>Vivero Pedotti compras de lombrices y plantas del hogar</title>
     <link rel="stylesheet" href="css/style.css" />
+    <!--favicon--> 
     <link rel="shortcut icon" href="images/logoico.ico" type="image/x-icon">
+    <!--meta description-->
+    <meta name="description" content="Vivero Pedotti Compras de plantas y lombrices californianas, Cursos, talleres y servicio de jardinería">
+    <!--meta keywords-->
+    <meta name="keywords" content="Vivero Plantas Arboles Talleres jardineria servicios asesoramiento jardines-verticales">
+    <!--Open Graph-->
+    <!--Open Graph - Type-->
+    <meta property:'og_type' content="Web site">
+    <!--Open Graph - title-->
+    <meta property:'og_title' content="Vivero Pedotti| Plantas para tu hogar">
+    <!--Open Graph - url-->
+    <meta property:'og_url' content="">
+    <!--Open Graph - image-->
+    <meta property:'og_image' content="">
+
 </head>
 
 <body>
-    <!--Menu cabecera-->
+    <!--header index start-->
     <header class="header-container">
 
         <section class="header-logo">
@@ -51,9 +66,9 @@
         </section>
 
     </header>
-    <!--fin menu cabecera-->
+    <!--header index end-->
 
-    <!--menu principal-->
+    <!--main index-->
     <main class="index">
         <!--seccion1 imagenes carrusel-->
         <section class="carrusel-container">
@@ -80,27 +95,27 @@
         <!--seccion2 articulos-->
         <section class="article-container">
             <div class="martin">
-                <h2 class="title">workshop</h2>
-                <p class="text">Martin Huerto es ingeniero agronomo y apasionado por la naturaleza. Tres veces a
+                <h2 class="article-title">workshop</h2>
+                <p class="article-text">Martin Huerto es ingeniero agronomo y apasionado por la naturaleza. Tres veces a
                     la semana lo veremos al frente de nuestros talleres.</p>
             </div>
 
             <div class="lombriz">
-                <h2 class="title">lombrices rojas</h2>
-                <p class="text">Comprá un nucleo de lombrices rojas en Vivero Pedotti y adquirí el manual
+                <h2 class="article-title">lombrices rojas</h2>
+                <p class="article-text">Comprá un nucleo de lombrices rojas en Vivero Pedotti y adquirí el manual
                     instructivo para iniciar tu lombricompost domestico.</p>
             </div>
 
             <div class="aflorales">
-                <h2 class="title">arreglos florales</h2>
-                <p class="text">consulta por nuestros servicios profesionales que brindamos para armados y
+                <h2 class="article-title">arreglos florales</h2>
+                <p class="article-text">consulta por nuestros servicios profesionales que brindamos para armados y
                     diseños de esculturas florales. </p>
             </div>
         </section>
     </main>
     <!--fin destacado-->
 
-    <!--Pie de pagina-->
+    <!--footer index start-->
     <footer id="pie" class="footer-container">
         <div class="footer-logo">
             <a href="index.html">
@@ -143,8 +158,8 @@
                 </li>
             </ul>
         </div>
-
     </footer>
+    <!--footer index end-->
 </body>
 
 </html>
